Issue #92 #105 : make a shared video player component. Fix poster not showing and timeline

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -57,83 +57,6 @@ ion-toolbar {
   width: 80%;
   min-width: 250px;
   margin: 6vh auto;
-  video {
-    display: block;
-    width: 100%;
-    height: auto;
-    margin: auto;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    border: 2px solid var(--ion-color-inria-blue);
-    border-radius: 10px;
-
-    &::-webkit-media-controls-timeline,
-    &::-webkit-media-controls-timeline-container,
-    &::-webkit-media-controls-fullscreen-button,
-    &::-webkit-media-controls-overlay-play-button,
-    &::-webkit-media-controls-play-button,
-    &::-webkit-media-controls-toggle-closed-captions-button,
-    &::-webkit-media-controls-volume-slider,
-    &::-webkit-media-controls-mute-button,
-    &::-webkit-media-controls-time-remaining-display,
-    &::-webkit-media-controls-current-time-display{
-      display: none!important;
-    }
-  }
-
-  img{
-    position: absolute;
-    width:100%;
-    top:0;
-    left:0;
-    bottom:-2px;
-    right:0;
-    border: 2px solid var(--ion-color-inria-blue);
-    border-radius: 10px;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 74px;
-    cursor: pointer;
-    background: transparent;
-    box-sizing: border-box;
-    border: 0 solid transparent;
-    border-color: transparent transparent transparent rgba(32, 32, 32, 0.7);
-    border-style: solid;
-    border-width: 37px 0 37px 60px;
-    transform: translate(-50%, -50%);
-    transition: 100ms all ease;
-  }
-  &.playing {
-    video{
-      &::-webkit-media-controls-play-button,
-      &::-webkit-media-controls-timeline,
-      &::-webkit-media-controls-timeline-container,
-      &::-webkit-media-controls-fullscreen-button{
-        display: initial!important;
-      }
-    }
-
-    &:after {
-      border-style: double;
-      border-width: 0px 0 0px 60px;
-      animation: fadeOut .5s forwards;
-      animation-delay: .5s;
-    }
-  }
-
-  @keyframes fadeOut {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-    }
-  }
 }
 
 .about-course {
